// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates cloudformation updateStack params with an inline source 1`] = `
Object {
  "Capabilities": Array [
    "CAPABILITY_IAM",
    "CAPABILITY_NAMED_IAM",
  ],
  "OnFailure": "DO_NOTHING",
  "StackName": "bar",
  "StackPolicyBody": "{\\"Statement\\":[{\\"Effect\\":\\"Deny\\",\\"Principal\\":\\"*\\",\\"Action\\":[\\"Update:Replace\\",\\"Update:Delete\\"],\\"Resource\\":\\"*\\",\\"Condition\\":{\\"StringEquals\\":{\\"ResourceType\\":[\\"AWS::DynamoDB::Table\\",\\"AWS::ApiGateway::RestApi\\",\\"AWS::CloudFront::Distribution\\",\\"AWS::S3::Bucket\\"]}}},{\\"Effect\\":\\"Allow\\",\\"Principal\\":\\"*\\",\\"Action\\":\\"Update:*\\",\\"Resource\\":\\"*\\"}]}",
  "Tags": Array [
    Object {
      "Key": "createdBy",
      "Value": "dawson",
    },
  ],
  "TemplateBody": "{\\"Resources\\":{},\\"Outputs\\":{}}",
}
`;

exports[`creates cloudformation updateStack params with source from S3 1`] = `
Object {
  "Capabilities": Array [
    "CAPABILITY_IAM",
    "CAPABILITY_NAMED_IAM",
  ],
  "OnFailure": "DO_NOTHING",
  "StackName": "bar",
  "StackPolicyBody": "{\\"Statement\\":[{\\"Effect\\":\\"Deny\\",\\"Principal\\":\\"*\\",\\"Action\\":[\\"Update:Replace\\",\\"Update:Delete\\"],\\"Resource\\":\\"*\\",\\"Condition\\":{\\"StringEquals\\":{\\"ResourceType\\":[\\"AWS::DynamoDB::Table\\",\\"AWS::ApiGateway::RestApi\\",\\"AWS::CloudFront::Distribution\\",\\"AWS::S3::Bucket\\"]}}},{\\"Effect\\":\\"Allow\\",\\"Principal\\":\\"*\\",\\"Action\\":\\"Update:*\\",\\"Resource\\":\\"*\\"}]}",
  "Tags": Array [
    Object {
      "Key": "createdBy",
      "Value": "dawson",
    },
  ],
  "TemplateURL": "https://s3....",
}
`;
